<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">COMP3025-Assignment1</string>
    <string name="clear">\u0043</string>
    <string name="clearLandscape">\u0041\u0043</string>
    <string name="percent">\u0025</string>
    <string name="back_space">\uF55A</string>
    <string name="divide">\u00F7</string>
    <string name="multiply">\u00D7</string>
    <string name="subtract">\u2212</string>
    <string name="add">\u002B</string>
    <string name="plus_minus">\u00B1</string>
    <string name="equals">\u003D</string>
    <string name="zero">\u0030</string>
    <string name="one">\u0031</string>
    <string name="two">\u0032</string>
    <string name="three">\u0033</string>
    <string name="four">\u0034</string>
    <string name="five">\u0035</string>
    <string name="six">\u0036</string>
    <string name="seven">\u0037</string>
    <string name="eight">\u0038</string>
    <string name="nine">\u0039</string>
    <string name="ln">\u006C\u006E</string>
    <string name="xFactorial">\u0078\u0021</string>
    <string name="xModulus">|\u0078|</string>
    <string name="log">log</string>
    <string name="brackets">()</string>
    <string name="secondButton">\u0032\u207F\u1D48</string>
    <string name="xSquare">\u0078\u00B2</string>
    <string name="eRaisedToX">\u0065\u02E3</string>
    <string name="xRaisedToY">\u0078\u02B8</string>
    <string name="oneUponX">\u0031\u2044\u0078</string>
    <string name="squareRoot">\u0032\u221A\u0078</string>
    <string name="cubeRoot">\u0033\u221A\u0078</string>
    <string name="customRoot">\u0078\u221A\u0079</string>
    <string name="radButton">\u0052\u0061\u0064</string>
    <string name="sinButton">\u0073\u0069\u006E</string>
    <string name="cosButton">\u0063\u006F\u0073</string>
    <string name="tanButton">\u0074\u0061\u006E</string>
</resources>