<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/appBackground"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/resultsRow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.25">

        <TextView
            android:id="@+id/resultTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/fa_solid_900"
            android:gravity="end"
            android:tag="result"
            android:paddingHorizontal="@dimen/px_10"
            android:paddingBottom="@dimen/px_10"
            android:text="@string/zero"
            android:textSize="@dimen/resultTextViewFontSize" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/dividerRow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingStart="@dimen/px_20"
        android:paddingEnd="@dimen/px_20"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/resultsRow">

        <View
            android:id="@+id/divider"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:tag="divider"
            android:layout_weight="1"
            android:background="@android:drawable/screen_background_dark" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/backspaceRow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dividerRow">

        <Button
            android:id="@+id/backspaceButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/appBackground"
            android:fontFamily="@font/fa_solid_900"
            android:gravity="end"
            android:tag="backspace"
            android:paddingStart="@dimen/px_10"
            android:paddingEnd="@dimen/px_20"
            android:text="@string/back_space"
            android:textColor="@color/black"
            android:textSize="@dimen/backspaceButtonSize" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/firstRow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/backspaceRow"
        app:layout_constraintBottom_toTopOf="@+id/secondRow">

        <Button
            android:id="@+id/clearButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/mx_10"
            android:layout_weight="1"
            android:backgroundTint="@color/numberButtonsBackground"
            android:fontFamily="@font/fa_solid_900"
            android:text="@string/clear"
            android:textColor="@color/black"
            android:textSize="@dimen/buttonIconSize"
            android:textStyle="bold" />

        <Button
            android:id="@+id/percentButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/mx_10"
            android:layout_weight="1"
            android:backgroundTint="@color/operatorButtonsBackground"
            android:fontFamily="@font/fa_solid_900"
            android:text="@string/percent"
            android:textColor="@color/white"
            android:textSize="@dimen/buttonIconSize" />

        <Button
            android:id="@+id/plusMinusButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/mx_10"
            android:layout_weight="1"
            android:backgroundTint="@color/operatorButtonsBackground"
            android:fontFamily="@font/fa_solid_900"
            android:text="@string/plus_minus"
            android:textColor="@color/white"
            android:textSize="@dimen/buttonIconSize" />

        <Button
            android:id="@+id/divideButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/mx_10"
            android:layout_weight="1"
            android:backgroundTint="@color/operatorButtonsBackground"
            android:fontFamily="@font/fa_solid_900"
            android:text="@string/divide"
            android:textColor="@color/white"
            android:textSize="@dimen/buttonIconSize" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/secondRow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/firstRow"
        app:layout_constraintBottom_toTopOf="@+id/thirdRow">

        <Button
            android:id="@+id/sevenButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/mx_10"
            android:layout_weight="1"
            android:backgroundTint="@color/numberButtonsBackground"
            android:fontFamily="@font/fa_solid_900"
            android:tag="7"
            android:text="@string/seven"
            android:textColor="@color/black"
            android:textSize="@dimen/buttonIconSize"
            android:textStyle="bold" />

        <Button
            android:id="@+id/eightButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/mx_10"
            android:layout_weight="1"
            android:backgroundTint="@color/numberButtonsBackground"
            android:fontFamily="@font/fa_solid_900"
            android:tag="8"
            android:text="@string/eight"
            android:textColor="@color/black"
            android:textSize="@dimen/buttonIconSize" />

        <Button
            android:id="@+id/nineButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/mx_10"
            android:layout_weight="1"
            android:backgroundTint="@color/numberButtonsBackground"
            android:fontFamily="@font/fa_solid_900"
            android:tag="9"
            android:text="@string/nine"
            android:textColor="@color/black"
            android:textSize="@dimen/buttonIconSize" />

        <Button
            android:id="@+id/multiplyButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/mx_10"
            android:layout_weight="1"
            android:tag="multiply"
            android:backgroundTint="@color/operatorButtonsBackground"
            android:fontFamily="@font/fa_solid_900"
            android:text="@string/multiply"
            android:textColor="@color/white"
            android:textSize="@dimen/buttonIconSize" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/thirdRow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/secondRow"
        app:layout_constraintBottom_toTopOf="@+id/fourthRow">

        <Button
            android:id="@+id/fourButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/mx_10"
            android:layout_weight="1"
            android:backgroundTint="@color/numberButtonsBackground"
            android:fontFamily="@font/fa_solid_900"
            android:tag="4"
            android:text="@string/four"
            android:textColor="@color/black"
            android:textSize="@dimen/buttonIconSize"
            android:textStyle="bold" />

        <Button
            android:id="@+id/fiveButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/mx_10"
            android:layout_weight="1"
            android:backgroundTint="@color/numberButtonsBackground"
            android:fontFamily="@font/fa_solid_900"
            android:tag="5"
            android:text="@string/five"
            android:textColor="@color/black"
            android:textSize="@dimen/buttonIconSize" />

        <Button
            android:id="@+id/sixButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/mx_10"
            android:layout_weight="1"
            android:backgroundTint="@color/numberButtonsBackground"
            android:fontFamily="@font/fa_solid_900"
            android:tag="6"
            android:text="@string/six"
            android:textColor="@color/black"
            android:textSize="@dimen/buttonIconSize" />

        <Button
            android:id="@+id/subtractButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/mx_10"
            android:layout_weight="1"
            android:tag="subtract"
            android:backgroundTint="@color/operatorButtonsBackground"
            android:fontFamily="@font/fa_solid_900"
            android:text="@string/subtract"
            android:textColor="@color/white"
            android:textSize="@dimen/buttonIconSize" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/fourthRow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/thirdRow"
        app:layout_constraintBottom_toTopOf="@+id/fifthRow">

        <Button
            android:id="@+id/oneButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/mx_10"
            android:layout_weight="1"
            android:backgroundTint="@color/numberButtonsBackground"
            android:fontFamily="@font/fa_solid_900"
            android:tag="1"
            android:text="@string/one"
            android:textColor="@color/black"
            android:textSize="@dimen/buttonIconSize"
            android:textStyle="bold" />

        <Button
            android:id="@+id/twoButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/mx_10"
            android:layout_weight="1"
            android:backgroundTint="@color/numberButtonsBackground"
            android:fontFamily="@font/fa_solid_900"
            android:tag="2"
            android:text="@string/two"
            android:textColor="@color/black"
            android:textSize="@dimen/buttonIconSize" />

        <Button
            android:id="@+id/threeButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/mx_10"
            android:layout_weight="1"
            android:backgroundTint="@color/numberButtonsBackground"
            android:fontFamily="@font/fa_solid_900"
            android:tag="3"
            android:text="@string/three"
            android:textColor="@color/black"
            android:textSize="@dimen/buttonIconSize" />

        <Button
            android:id="@+id/addButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/mx_10"
            android:layout_weight="1"
            android:tag="add"
            android:backgroundTint="@color/operatorButtonsBackground"
            android:fontFamily="@font/fa_solid_900"
            android:text="@string/add"
            android:textColor="@color/white"
            android:textSize="@dimen/buttonIconSize" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/fifthRow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fourthRow"
        app:layout_constraintBottom_toBottomOf="parent">

        <Button
            android:id="@+id/zeroButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/mx_10"
            android:layout_weight="200"
            android:backgroundTint="@color/numberButtonsBackground"
            android:fontFamily="@font/fa_solid_900"
            android:tag="0"
            android:text="@string/zero"
            android:textColor="@color/black"
            android:textSize="@dimen/buttonIconSize"
            android:textStyle="bold" />

        <Button
            android:id="@+id/decimalButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/mx_10"
            android:layout_weight="1"
            android:backgroundTint="@color/numberButtonsBackground"
            android:fontFamily="@font/fa_solid_900"
            android:tag="."
            android:text="."
            android:textColor="@color/black"
            android:textSize="@dimen/buttonIconSize" />

        <Button
            android:id="@+id/equalsButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/mx_10"
            android:layout_weight="1"
            android:backgroundTint="@color/equalsButtonBackground"
            android:fontFamily="@font/fa_solid_900"
            android:tag="="
            android:text="@string/equals"
            android:textColor="@color/white"
            android:textSize="@dimen/buttonIconSize" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>